2002-05-21  John Harper  <jsh@unfactored.org>

	* Merged from HEAD:

	2002-05-14  John Harper  <jsh@unfactored.org>

	* widgets/font.jl (make-font-item): made entry uneditable

2002-04-21  John Harper  <jsh@unfactored.org>

	* Merged changes from HEAD

	2002-04-18  John Harper  <jsh@unfactored.org>

	* widgets/scheme-boolean.jl, Makefile.in: new widget, a boolean
	but returns #f and #t (though it accepts nil and t still).
	Implemented as a toggle button. Adapted from merlin
	<merlin@merlin.org>

	* widget.jl (make-choice-item): if IDX is null, select the
	first item. Patch from merlin <merlin@merlin.org>

2002-04-14  John Harper  <jsh@unfactored.org>

	* widgets/list.jl: return false from button_press_event and
	key_press_event handlers, fixes #75866

2002-04-13  John Harper  <jsh@unfactored.org>

	* stock.jl.gtk, stock.jl.gnome: s/gtk-signal-/g-signal/

2002-04-01  John Harper  <jsh@unfactored.org>

	* widget.jl, widget-test.jl: 
	* widgets/list.jl, widgets/font.jl, widgets/file.jl,
	widgets/color.jl: s/gtk-signal-/g-signal-/

2002-02-13  John Harper  <jsh@unfactored.org>

	* stock.jl.gtk, stock.jl.gnome (stock-button): new
	gtk-button-new-from-stock in both cases now

2002-02-12  John Harper  <jsh@unfactored.org>

	* widget.jl, stock.jl.gtk, color-preview.jl: 
	* widgets/list.jl, widgets/file.jl: 

	Ported to current gnome2 rep-gtk

2002-01-29  John Harper  <jsh@unfactored.org>

	* widget.jl, widget-test.jl, widget-dialog.jl, stock.jl.gtk,
	stock.jl.gnome, color-preview.jl: 
	* widgets/pair.jl, widgets/list.jl, widgets/font.jl,
	widgets/file.jl, widgets/color.jl, widgets/alist.jl: 

	Changed module names for gnome2 rep-gtk

2001-01-05  John Harper  <jsh@eazel.com>

	* version 0.35

2000-12-30  John Harper  <jsh@eazel.com>

	* widget.jl (make-choice-item): options for the `choice' widget
	can now be formatted as `(SYMBOL "REAL-NAME")' as well a
	`SYMBOL'. The REAL-NAME string will be displayed when given

2000-12-22  John Harper  <jsh@eazel.com>
