@@ -1,3 +1,9 @@
+2002-11-02  John Harper  <jsh@unfactored.org>
+
+	* widgets/pair.jl (make-pair-item): added another (!) optional
+	arg, PACKING. It defines how the widgets are packed into their
+	containing box
+
 2002-05-21  John Harper  <jsh@unfactored.org>
 
 	* Merged from HEAD:
